# PhysicalOS

./: .gitignore  README.md  TECHNICAL_DETAILS.md  enhanced_data_logger.py  main.py  pyproject.toml  requirements.txt  run.py  smoothing.py  utils.py
scripts/: aggregate_dataset.py  interpolate_motion.py
src/physical_os/: constraints.py  data_logger.py  dynamics_engine.py  grf_estimator.py  interpolation.py  kinematics.py  main.py  physics_intelligence.py  relative_coordinates.py  vision_engine.py  visualizer_live.py
tests/: stress_test.py
