[project]
name = "physical_os"
version = "1.0.0"
description = "Enhanced Motion Capture Pipeline for Robotics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "PhysicalOS Team"}
]
dependencies = [
    "opencv-python==4.8.1.78",
    "mediapipe==0.10.8",
    "numpy==1.24.3",
    "pandas==2.1.4",
    "scipy==1.11.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
